<?xml version="1.0" encoding="utf-8"?>
<!-- Layouts designed by Sean Muldoon
S1714073
Mobile Platform Development coursework submission -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        style="@style/TertiaryBackground">
        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/PrimaryText">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MPD coursework submission by Sean Muldoon, S1714073"
            style="@style/SecondaryText">
        </TextView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PrimaryBackground">
        <TextView
            android:id="@+id/detailedLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Location"
            style="@style/ItemMainText"
            android:textSize="24sp"
            android:paddingVertical="20dp">
        </TextView>
    </RelativeLayout>

    <fragment
        android:id="@+id/detailedMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context="org.me.gcu.muldoonseanS1714073.MapActivity">
    </fragment>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/SecondaryBackground">

        <TextView
            android:id="@+id/detailedMagnitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Magnitude: 1.0"
            style="@style/ItemMainText"
            android:textSize="22sp"
            android:paddingVertical="15dp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_date"
                    style="@style/ItemHeader">
                </TextView>
                <TextView
                    android:id="@+id/detailedDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="10th of March 2020"
                    style="@style/ItemMainText">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_time"
                    style="@style/ItemHeader">
                </TextView>
                <TextView
                    android:id="@+id/detailedTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="00:00:00"
                    style="@style/ItemMainText">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_lat_long"
                    style="@style/ItemHeader">
                </TextView>
                <TextView
                    android:id="@+id/detailedLatLong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="52.349, -3.154"
                    style="@style/ItemMainText">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_depth"
                    style="@style/ItemHeader">
                </TextView>
                <TextView
                    android:id="@+id/detailedDepth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="16km"
                    style="@style/ItemMainText">
                </TextView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/menuFragmentPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>
</LinearLayout>